--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ server.port=8080
 spring.datasource.url = jdbc:mysql://localhost:3306/art?serverTimezone=UTC
 spring.datasource.username = art
 spring.datasource.password = password
+private.session-timeout = 10
